# smart-ats

./: .gitignore  COMPLIANCE_CHECKLIST.md  README.md  docker-compose.yml  smart-ats-deck-source.md  submission_metadata.yaml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py  run.py
backend/app/data/: ingest.py  normalize.py
backend/app/llm/: client.py  embedder.py  prompts.py
backend/app/pipeline/: critic.py  extract.py  gates.py  rerank.py  retrieval.py  rubric.py  scorer.py
backend/data/: candidates.csv  generate_dataset.py
backend/eval/: checks.py  planted.py
challenge/: README.md  behavioral.py  features.py  honeypot.py  inspect_candidates.py  jd.py  precompute.py  rank.py  requirements.txt  retrieval.py  sample.py  submission.csv
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: prerender-manifest.json  trace
frontend/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @swc.js
frontend/.next/static/chunks/: _app-pages-browser_node_modules_next_dist_client_dev_noop-turbopack-hmr_js.js  app-pages-internals.js  webpack.js
frontend/.next/types/app/: layout.ts  page.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CandidateCard.tsx  EvalPanel.tsx  RubricEditor.tsx
frontend/src/lib/: api.ts
(+13 files in other folders)
