[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.39.0",
    "faiss-cpu>=1.7.4",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "numpy>=2.0.0",
    "pandas>=2.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "sentence-transformers>=3.1.1",
    "tenacity>=9.0.0",
    "uvicorn[standard]>=0.30.0",
]
